zokrates_cli/examples/compile_errors/constant_reduction_fail.zok
def constant() -> u32:
    return 3

const u32 CONSTANT = constant()

def main(field[CONSTANT] a):
    return